--- a/server/mailer/templates/order-confirmation.hbs
+++ b/server/mailer/templates/order-confirmation.hbs
@@ -442,7 +442,6 @@
             <!-- Items Section -->
             <div class="items-section">
                 <h2 class="section-title">Order Items</h2>
-                
                 <table class="items-table">
                     <thead>
                         <tr>
@@ -489,11 +488,17 @@
                     <span>Discount Applied ({{couponCode}}):</span>
                     <span>-${{discountValue}}</span>
                 </div>
-                {{/if}}
                 <div class="total-item final">
                     <span>Total Payment:</span>
                     <span>${{newCartValue}}</span>
                 </div>
+                {{else}}
+                <div class="total-item final">
+                    <span>Total Payment:</span>
+                    <span>${{cartValue}}</span>
+                </div>
+                {{/if}}
+
             </div>
             
             <!-- Track Order Button -->
