Adding email template from UI, W.I.P.

--- a/server/mailer/templates/order-cancel-user.hbs
+++ b/server/mailer/templates/order-cancel-user.hbs
@@ -483,7 +483,7 @@
 
         <!-- Footer -->
         <div class="footer">
-            <p>Questions? Contact us at <a href="mailto:support@cartify.com">support@cartify.com</a> or {{supportPhone}}</p>
+            <p>Questions? Contact us at <a href="mailto:support@cartify.com">support@cartify.com</a></p>
             <p>&copy; 2025 Cartify. All rights reserved.</p>
         </div>
     </div>
