better template file management, bulk email service trial

--- a/server/mailer/adminTemplates/admin/123.hbs
+++ b/server/mailer/adminTemplates/admin/123.hbs
@@ -1,1 +1,8 @@
-123 test text
+<html>
+    <h1>Hello</h1>
+    <p>123 test file</p>
+    <p>new para 2</p>
+    <p>new para 3</p>
+    <p>{{fName}}</p>
+    <p>{{lName}}</p>
+</html>
