--- a/server/mailer/adminTemplates/admin/new_template.hbs
+++ b/server/mailer/adminTemplates/admin/new_template.hbs
@@ -229,7 +229,7 @@
                         <img src="https://freevector-images.s3.amazonaws.com/uploads/vector/preview/36682/36682.png" alt="Cartify">
                     </a>
                 </div>
-                <h1>Your Email Subject Here</h1>
+                <h1>My Email Subject Here</h1>
                 <p>Brief description or tagline</p>
             </div>
 
