Save prompt before switching templates, Add campaign form and Table schemas

--- a/server/mailer/adminTemplates/admin/new_placeholder.hbs
+++ b/server/mailer/adminTemplates/admin/new_placeholder.hbs
@@ -229,13 +229,13 @@
                         <img src="https://freevector-images.s3.amazonaws.com/uploads/vector/preview/36682/36682.png" alt="Cartify">
                     </a>
                 </div>
-                <h1>My Email Subject Here</h1>
+                <h1>Your Email Subject Here</h1>
                 <p>Brief description or tagline</p>
             </div>
 
             <!-- Main Content Section -->
             <div class="main-content">
-                <p>Hi there,</p>
+                <p>Hi {{fName}} {{lName}},</p>
                 
                 <p>Sometimes you just want to send a simple HTML email with a simple design and clear call to action. This is it.</p>
                 
