Campaign Page and UI changes, referral trial token

--- a/server/mailer/adminTemplates/admin/sale announcement.hbs
+++ b/server/mailer/adminTemplates/admin/sale announcement.hbs
@@ -229,8 +229,8 @@
                         <img src="https://freevector-images.s3.amazonaws.com/uploads/vector/preview/36682/36682.png" alt="Cartify">
                     </a>
                 </div>
-                <h1>Your Email Subject Here</h1>
-                <p>Brief description or tagline</p>
+                <h1>Great Indian Festival is here 🎉</h1>
+                <p>New and exciting offers</p>
             </div>
 
             <!-- Main Content Section -->
